--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
@@ -13,6 +14,8 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
         "nesbot/carbon": "^2.57",
+        "ramsey/uuid": "^4.2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
