--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.57",
         "ramsey/uuid": "^4.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
